--- a/src/components/inner/card-list/card-list-component-styles.scss
+++ b/src/components/inner/card-list/card-list-component-styles.scss
@@ -1,13 +1,6 @@
 .card-list{
-    background-color: red;
-    min-height: 61vh;
-    align-items: center;
-    border-top: 1px solid #dbdbdb;
-    color: #8e8e8e;
-    font-size: 12px;
-    font-weight: 600;
-    justify-content: center;
-    letter-spacing: 1px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    gap: 1rem;
 }
