--- a/src/components/header/header-component.styles.scss
+++ b/src/components/header/header-component.styles.scss
@@ -1,5 +1,9 @@
 .header {
-    width: 100vw;
-    height: 5.4rem;
-    border: 1px solid red;
+  width: 100vw;
+  height: 5vh;
+  background-color: rgb(255, 255, 255);
+  border-bottom: 1px solid rgb(219, 219, 219);
+  position: fixed;
+  width: 100%;
+  z-index: 3;
 }
