--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,10 +13,13 @@ body {
 
 .App {
   text-align: center;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(250,250,250);
+}
+.main{
+  margin-top: 5vh;
 }
 
 
