--- a/src/components/inner/navigation/navigation-component-styles.scss
+++ b/src/components/inner/navigation/navigation-component-styles.scss
@@ -1,12 +1,23 @@
 .navigation{
+    display: flex;
     height: 5.3rem;
     align-items: center;
     border-top: 1px solid #dbdbdb;
     color: #8e8e8e;
     font-size: 12px;
     font-weight: 600;
-    display: flex;
     justify-content: center;
     letter-spacing: 1px;
     text-align: center;
+    list-style-type: none;
+    text-transform: uppercase;
+
+    li {
+        width: 5vw;
+        height: 100%;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
