--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,33 +22,28 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
   margin-top: 5vh;
 }
 
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-icons {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+
+  div{
+    margin-left: auto;
+    width: 12vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  img{
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+  }
 }
 
-.App-link {
-  color: #61dafb;
+.icon {
+  font-size: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
