--- a/src/components/header/header-component.styles.scss
+++ b/src/components/header/header-component.styles.scss
@@ -1,9 +1,28 @@
 .header {
   width: 100vw;
-  height: 5vh;
+  height: 6vh;
   background-color: rgb(255, 255, 255);
   border-bottom: 1px solid rgb(219, 219, 219);
   position: fixed;
   width: 100%;
   z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &-logo {
+    width: 36rem;
+    text-align: left;
+  }
+
+  &-icons{
+    width: 36rem;
+  }
+
+  &-search{
+    width: 20rem;
+    border: 1px solid green;
+  }
+
+
 }
