--- a/src/components/header/header-component.styles.scss
+++ b/src/components/header/header-component.styles.scss
@@ -20,8 +20,15 @@
   }
 
   &-search{
-    width: 20rem;
-    border: 1px solid green;
+    flex: 0 1 auto;
+    font-size: 1.4rem;
+    background-color: rgba(219, 219, 219, .2);
+    border-radius: 3px;
+    outline: 0;
+    padding: 5px 10px;
+    z-index: 2;
+    border: none;
+
   }
 
 
