--- a/src/components/inner/card/card-component-styles.scss
+++ b/src/components/inner/card/card-component-styles.scss
@@ -1,21 +1,36 @@
 .card {
-    border-radius: 5px;
-    padding: 1.5rem;
-    cursor: pointer;
-    backface-visibility: hidden;
-    transform: translateZ(0);
-    transition: transform 0.25s ease-out;
-    h1{
-        text-align: center;
-        color: #f1f1f1
-    }
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+  position: relative;
+  border-radius: 5px;
+  padding: 1.5rem;
+  cursor: pointer;
+  backface-visibility: hidden;
+  transform: translateZ(0);
+  transition: transform 0.25s ease-out;
+
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    &:hover {
+      filter: brightness(50%);
+      opacity: 0.95;
     }
   }
-  
-  .card:hover {
-    transform: scale(1.05);
+
+  span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.8rem;
+    color: rgb(240, 234, 234);
+    z-index: 5;
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    pointer-events: none;
   }
+}
