--- a/src/components/profile/profile-component-styles.scss
+++ b/src/components/profile/profile-component-styles.scss
@@ -1,19 +1,74 @@
 .profile {
-    margin-top: 5vh;
-    width: 93.5rem;
-    height: 27rem;
-    display: flex;
+  margin-top: 5vh;
+  width: 93.5rem;
+  height: 27rem;
+  display: flex;
 
-    &-img{
-        width: 30%;
+  &-img {
+    width: 30%;
+    margin-right: 6%;
 
-        img{
-            border-radius: 50%;
+    img {
+      border-radius: 50%;
+    }
+  }
+
+  &-aside {
+    width: 64%;
+    //border: 1px solid red;
+
+    &-buttons {
+      border: 1px dotted rgb(38, 38, 38);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      h2 {
+        padding: 0;
+        margin: 0;
+        font-size: 28px;
+        font-weight: normal;
+        color: rgb(38, 38, 38);
+      }
+    }
+
+    &-stats{
+      display: flex;
+      justify-content: space-between;
+      border: 1px dotted rgb(38, 38, 38);
+    }
+
+    &-description {
+      line-height: 1.6;
+      text-align: left;
+      list-style-type: none;
+      font-size: 1.5rem;
+
+      h3{
+        font-size: 1.6rem;
+        padding: 0;
+        margin: 0;
+        font-weight: 500;
+      }
+
+      li {
+        span {
+          padding-right: 5px;
         }
+        a {
+          color: #00376b;
+          font-weight: 600;
+          text-decoration: none;
+        }
+      }
     }
-    
-    &-aside{
-        width: 70%;
-        border: 1px solid red;
+    &-followed {
+      margin-top: 10px;
+      text-align: left;
+      color: #606060;
+      font-size: 1.2rem;
     }
+    div {
+    }
+  }
 }
