infinit-scroll start

--- a/src/components/profile/profile-component-styles.scss
+++ b/src/components/profile/profile-component-styles.scss
@@ -1,12 +1,12 @@
 .profile {
   margin-top: 5vh;
   width: 93.5rem;
-  height: 27rem;
+  height: 29rem;
   display: flex;
 
   &-img {
     width: 30%;
-    margin-right: 6%;
+    margin-right: 4%;
 
     img {
       border-radius: 50%;
@@ -14,28 +14,62 @@
   }
 
   &-aside {
-    width: 64%;
+    width: 66%;
     //border: 1px solid red;
 
     &-buttons {
-      border: 1px dotted rgb(38, 38, 38);
       display: flex;
-      justify-content: space-between;
       align-items: center;
 
       h2 {
-        padding: 0;
         margin: 0;
         font-size: 28px;
         font-weight: normal;
         color: rgb(38, 38, 38);
+        margin-right: 2rem;
+      }
+      button {
+        font-size: 14px;
+        appearance: none;
+        background: 0 0;
+        border: 0;
+        cursor: pointer;
+        font-weight: 600;
+        padding: 5px 9px;
+        text-align: center;
+        text-transform: inherit;
+        text-overflow: ellipsis;
+        user-select: none;
+        width: auto;
+        border-radius: 4px;
+        color: #fff;
+        border: 1px solid transparent;
+        background-color: #0095f6;
+
+        &:hover{
+          opacity: 0.8;
+        }
       }
     }
 
-    &-stats{
-      display: flex;
-      justify-content: space-between;
-      border: 1px dotted rgb(38, 38, 38);
+    &-stats {
+      margin-top: 3rem;
+      //to improve
+      //using css (not) to exclude spans
+      ul {
+        font-size: 1.6rem;
+        width: 17vw;
+        display: flex;
+        justify-content: space-between;
+        li {
+          list-style: none;
+          font-weight: bold;
+        }
+        span {
+          margin-left: 0.3rem;
+          font-weight: normal;
+        }
+      }
     }
 
     &-description {
@@ -44,7 +78,7 @@
       list-style-type: none;
       font-size: 1.5rem;
 
-      h3{
+      h3 {
         font-size: 1.6rem;
         padding: 0;
         margin: 0;
@@ -67,8 +101,6 @@
       text-align: left;
       color: #606060;
       font-size: 1.2rem;
-    }
-    div {
     }
   }
 }
