--- a/src/components/header/header-component.styles.scss
+++ b/src/components/header/header-component.styles.scss
@@ -12,24 +12,27 @@
 
   &-logo {
     width: 36rem;
-    text-align: left;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
   }
 
   &-icons{
-    width: 36rem;
+    width: 42rem;
+
+    div {
+      width: 12vw;
+    }
   }
 
   &-search{
     flex: 0 1 auto;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     background-color: rgba(219, 219, 219, .2);
     border-radius: 3px;
     outline: 0;
     padding: 5px 10px;
     z-index: 2;
     border: none;
-
   }
-
-
 }
