--- a/src/components/header/search/searc-component.styles.scss
+++ b/src/components/header/search/searc-component.styles.scss
@@ -1,7 +1,13 @@
 .search {
   position: relative;
   color: rgb(142, 142, 142);
-  font-size: 14px;
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  span {
+    transform: translateX(+2rem);
+    z-index: 3;
+  }
 }
 
 .search input {
@@ -9,15 +15,11 @@
   width: 20rem;
   height: 28px;
   background: #fcfcfc;
-  border: 1px solid rgba(142, 142, 142, 0.5);
+  border: 1px solid rgba(142, 142, 142, 0.4);
   border-radius: 3px;
 }
 
 .search input {
-  text-indent: 25px;
+  text-indent: 1.5rem;
 }
-.search .fa-search {
-  position: absolute;
-  top: 8px;
-  left: 10px;
-}
+
