--- a/src/components/main/card/card-component-styles.scss
+++ b/src/components/main/card/card-component-styles.scss
@@ -6,7 +6,7 @@
   backface-visibility: hidden;
   transform: translateZ(0);
   transition: transform 0.25s ease-out;
-
+  font-weight: normal;
 
   img {
     width: 100%;
@@ -27,7 +27,7 @@
     font-size: 1.8rem;
     color: rgb(240, 234, 234);
     z-index: 5;
-    width: 60%;
+    width: 55%;
     display: flex;
     align-items: center;
     justify-content: space-around;
