--- a/src/components/main/card/card-component-styles.scss
+++ b/src/components/main/card/card-component-styles.scss
@@ -1,12 +1,13 @@
 .card {
   position: relative;
   border-radius: 5px;
-  padding: 1.5rem;
   cursor: pointer;
   backface-visibility: hidden;
   transform: translateZ(0);
   transition: transform 0.25s ease-out;
   font-weight: normal;
+  width: 29.3rem;
+  height: 29.3rem;
 
   img {
     width: 100%;
@@ -27,7 +28,7 @@
     font-size: 1.8rem;
     color: rgb(240, 234, 234);
     z-index: 5;
-    width: 55%;
+    width: 60%;
     display: flex;
     align-items: center;
     justify-content: space-around;
