--- a/src/components/header/header-component.styles.scss
+++ b/src/components/header/header-component.styles.scss
@@ -1,6 +1,6 @@
 .header {
   width: 100vw;
-  height: 6vh;
+  height: 5.3rem;
   background-color: rgb(255, 255, 255);
   border-bottom: 1px solid rgb(219, 219, 219);
   position: fixed;
@@ -21,7 +21,7 @@
     width: 42rem;
 
     div {
-      width: 12vw;
+      width: 20rem;
     }
   }
 
