--- a/src/components/main/content/content-component.styles.scss
+++ b/src/components/main/content/content-component.styles.scss
@@ -20,7 +20,7 @@
     height: 5.3rem;
     display: flex;
     width: 20vw;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
   }
 
@@ -28,9 +28,9 @@
     width: 4.2vw;
     cursor: pointer;
     display: flex;
-    justify-content: space-evenly;
 
     a {
+      margin-left: 0.8rem;
       color: #8e8e8e;
       text-decoration: none;
     }
