--- a/src/components/profile/profile-component-styles.scss
+++ b/src/components/profile/profile-component-styles.scss
@@ -99,7 +99,7 @@
     &-followed {
       margin-top: 10px;
       text-align: left;
-      color: #606060;
+      color: rgb(96, 96, 96);
       font-size: 1.2rem;
     }
   }
