--- a/src/components/main/card/card-component-styles.scss
+++ b/src/components/main/card/card-component-styles.scss
@@ -20,7 +20,7 @@
     }
   }
 
-  span {
+  div {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -28,10 +28,22 @@
     font-size: 1.8rem;
     color: rgb(240, 234, 234);
     z-index: 5;
-    width: 60%;
+    width: 65%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
     pointer-events: none;
+    justify-content: space-around;
+
+
+    li {
+  
+      width: auto;
+      display: flex;
+      align-items: center;
+      
+      span {
+        margin-left: 0.6rem;
+      }
+    }
   }
 }
