--- a/src/components/main/content/content-component.styles.scss
+++ b/src/components/main/content/content-component.styles.scss
@@ -12,7 +12,7 @@
   list-style-type: none;
   text-transform: uppercase;
   width: 93.5rem;
-  min-height: 66.5vh;
+  height: 5.3rem;
   overflow: hidden;
 
   ul {
