--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -37,4 +37,5 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
+    background-color: rgb(250,250,250);
   }
