--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   background-color: rgb(250,250,250);
+  height: 105vh;
 }
 .main{
   margin-top: 5vh;
